# Homeworks-2.10.2

./: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Homework-2.6.3.cpp  IsoscelesTriangle.cpp  IsoscelesTriangle.h  RightTriangle.cpp  RightTriangle.h  figure.cpp  figure.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  square.cpp  square.h  triangle.cpp  triangle.h
